[tool.poetry]
name = "darksearch"
version = "2.1.1"
description = "Python API wrapper for DarkSearch (darksearch.io)."
authors = ["Aidan Holland <thehappydinoa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thehappydinoa/DarkSearch"
classifiers = [
  "Typing :: Typed",
  "Topic :: Internet",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Framework :: Pytest",
  "Framework :: Flake8",
  "Environment :: Console",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.scripts]
darksearch = "darksearch.cli:main"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/thehappydinoa/DarkSearch/issues"
"Documentation" = "https://darksearch.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.6.0,<4"
requests = "^2.25"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.9"}
mypy = {version = "^0.812.0"}
black = {version = "^20.8b1",allow-prereleases = true}
pytest = {version = "^6.2"}
pytest-console-scripts = {version = "^1.2"}
pytest-httpserver = {version = "^1.0"}
coverage = "^5.5"
pytest-cov = "^2.11.1"

[tool.pytest.ini_options]
minversion = "4.0"
script_launch_mode = "subprocess"
testpaths = "tests"
addopts = "--cov -p no:warnings"

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
