[tool.poetry]
name = "darksearch"
version = "2.1.3"
description = "Python API wrapper for DarkSearch (darksearch.io)."
authors = ["Aidan Holland <thehappydinoa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thehappydinoa/DarkSearch"
classifiers = [
  "Typing :: Typed",
  "Topic :: Internet",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Framework :: Pytest",
  "Framework :: Flake8",
  "Environment :: Console",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.scripts]
darksearch = "darksearch.cli:main"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/thehappydinoa/DarkSearch/issues"
"Documentation" = "https://darksearch.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.6.2,<4"

requests = "^2.26.0"
rich = ">=10.15.1,<13.0.0"
types-requests = "^2.26.1"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = {version = "^4.0"}
flake8-isort = "^4.1.1"
flake8-simplify = "^0.17.1"
isort = "^5.10.1"
mypy = {version = "^0.940"}
pytest = {version = "^7.0"}
pytest-console-scripts = {version = "^1.2"}
pytest-cov = "^3.0.0"
pytest-httpserver = {version = "^1.0"}

[tool.pytest.ini_options]
minversion = "4.0"
script_launch_mode = "subprocess"
testpaths = "tests"
addopts = "--cov -p no:warnings"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
